Specified minimum width to prevent squishing

--- a/src/main/resources/public/sclera.css
+++ b/src/main/resources/public/sclera.css
@@ -19,6 +19,7 @@
 
 body {
     font-family: sans-serif;
+    min-width: 300px;
 }
 
 .sclera .color-blue {
